| Summary: | ASTERISK-25687: res_musiconhold: Concurrent invocations of 'moh reload' cause a crash | ||
| Reporter: | Sean Bright (seanbright) | Labels: | |
| Date Opened: | 2016-01-11 17:01:22.000-0600 | Date Closed: | 2016-01-13 09:34:36.000-0600 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_musiconhold |
| Versions: | 11.20.0 | Frequency of Occurrence | Occasional |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When you have a large number of entries in musiconhold.conf, calling 'moh reload' from the CLI can take a long time. If 'moh reload' is invoked again from another console, a crash can occur.
In our environment we aren't seeing a core file, so I don't have a backtrace. A possible fix for this is to change the implementation of 'moh reload' to call ast_module_reload("res_musiconhold") which would prevent multiple simultaneous invocations. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-01-11 17:01:23.599-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Joshua C. Colp (jcolp) 2016-01-12 19:28:59.357-0600 Still planning to sort your review out for this and get it up? By: Sean Bright (seanbright) 2016-01-13 06:41:12.901-0600 No sir. I gave up when I couldn't access Jenkins to see why the master build had broken. It's a trivial fix for someone with the appropriate CI know-how. By: Joshua C. Colp (jcolp) 2016-01-13 07:15:34.684-0600 I fixed the CI, so subsequent stuff should be fine unless there truly is a problem. | ||